force-app/main/default/objects/Project_Decision__c/Project_Decision__c.object-meta.xml
<CustomObject>
    <label>Project Decision</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>PD No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>