force-app/main/default/objects/Project_Decision__c/fields/Decision_Description__c.field-meta.xml
<CustomField>
    <fullName>Decision_Description__c</fullName>
    <inlineHelpText>Project decisions are recorded to reflect decisions made that may not impact the project POR, but are relevant to record such as a decision to reduce beta test time, or loan a resource to another project.</inlineHelpText>
    <label>Decision Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>