force-app/main/default/objects/Project_Decision__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipLabel>Project Decisions</relationshipLabel>
    <relationshipName>Project_Decisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>